--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,15 @@
     -->
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <link rel="stylesheet" href="./styles.css">
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+ crossorigin="anonymous">
+
+
+
+<!-- Latest compiled and minified CSS -->
+
 	<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -27,7 +36,13 @@
 	<noscript>
 		You need to enable JavaScript to run this app.
 	</noscript>
+  <div>
+    <div class="header">
+      <div class="header-logo">
+        </div>
+    </div>
 	<div id="root"></div>
+  </div>
 	<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
